# msroom

./: .dockerignore  .gitignore  Dockerfile  README.md  notebook.ipynb  predict.py  pyproject.toml  requirements.txt  setup.sh  test_api.py  train.py
.ebextensions/: python.config
cloud_deployment/: Dockerfile  lambda_function.py
lab_notes/: ALIGNMENT_SUMMARY.txt  CHANGES_MADE.md  CHECKLIST.md  DEPLOYMENT.md  FILES_GENERATED.txt  INSTRUCTIONS.md  PRODUCTION_ALIGNMENT_COMPLETE.md  PROJECT_SUMMARY.md  TRAIN_PY_UPDATES.md  main.py
models/: model.pkl
