[project]
name = "mushroom-classifier"
version = "1.0.0"
description = "ML model for predicting mushroom edibility - ML Zoomcamp Midterm Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "scikit-learn>=1.3.2",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.10.7",
    "mplcyberpunk>=0.7.6",
    "seaborn>=0.13.2",
    "pytest>=7.4.0",
]

